[project]
name = "rendimento-investimento"
version = "0.1.0"
description = "Função para calcular retoro de investimento mensal com base em uma taxa de juros acordada."
authors = [
    {name = "Marcel Fraga",email = "arqmarcel@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
